--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "react-slick": "^0.29.0",
     "react-spring": "^9.7.3",
     "react-syntax-highlighter": "^15.5.0",
+    "react-toastify": "^11.0.5",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "remark": "^15.0.1",
